@@ -9,6 +9,7 @@ import com.example.calculatorservice.dto.response.CalculationResponseDto;
 import com.example.calculatorservice.entity.Eyelet;
 import com.example.calculatorservice.entity.Material;
 import com.example.calculatorservice.entity.MaterialType;
+import com.example.calculatorservice.mapper.OperationMapper;
 import com.example.calculatorservice.service.CalculationService;
 import com.example.calculatorservice.service.EyeletService;
 import com.example.calculatorservice.service.MaterialService;
@@ -22,7 +23,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/calculations")
@@ -34,14 +34,15 @@ public class CalculationController {
     private final MaterialService materialService;
     private final OperationService operationService;
     private final EyeletService eyeletService;
+    private final OperationMapper operationMapper;
 
     @PreAuthorize("hasAnyRole('ADMIN', 'MANAGER', 'PRODUCTION')")
     @GetMapping("/materials")
     public ResponseEntity<List<MaterialDto>> getAllMaterials() {
         return ResponseEntity.ok(
                 materialService.getAllMaterials().stream()
-                        .map(this::toMaterialDto)
-                        .collect(Collectors.toList())
+                        .map(operationMapper::toMaterialDto)
+                        .toList()
         );
     }
 
@@ -56,8 +57,8 @@ public class CalculationController {
         }
         return ResponseEntity.ok(
                 materialService.getMaterialsByType(matType).stream()
-                        .map(this::toMaterialDto)
-                        .collect(Collectors.toList())
+                        .map(operationMapper::toMaterialDto)
+                        .toList()
         );
     }
 
@@ -72,8 +73,8 @@ public class CalculationController {
     public ResponseEntity<List<OperationDto>> getAllOperations() {
         return ResponseEntity.ok(
                 operationService.getAllOperations().stream()
-                        .map(this::toOperationDto)
-                        .collect(Collectors.toList())
+                        .map(operationMapper::toDto)
+                        .toList()
         );
     }
 
@@ -88,8 +89,8 @@ public class CalculationController {
         }
         return ResponseEntity.ok(
                 operationService.getOperationsByApplicableType(appType).stream()
-                        .map(this::toOperationDto)
-                        .collect(Collectors.toList())
+                        .map(operationMapper::toDto)
+                        .toList()
         );
     }
 
@@ -109,10 +110,6 @@ public class CalculationController {
         return ResponseEntity.ok(calculationService.getById(id));
     }
 
-    /**
-     * Real-time calculation of material area with podvorot (no persistence).
-     * Used by frontend for live price updates when entering dimensions.
-     */
     @PreAuthorize("hasAnyRole('ADMIN', 'MANAGER', 'PRODUCTION')")
     @PostMapping("/calculate-area")
     public ResponseEntity<BigDecimal> calculateArea(
@@ -127,10 +124,6 @@ public class CalculationController {
         return ResponseEntity.ok(area);
     }
 
-    /**
-     * Расчет стоимости одной позиции материала с учетом подворотов и операций.
-     * Используется для real-time обновления суммы в интерфейсе создания заказа.
-     */
     @PreAuthorize("hasAnyRole('ADMIN', 'MANAGER', 'PRODUCTION')")
     @PostMapping("/estimate-item")
     public ResponseEntity<BigDecimal> estimateItemCost(@Valid @RequestBody ItemCostRequest request) {
@@ -146,52 +139,10 @@ public class CalculationController {
         return ResponseEntity.ok(cost);
     }
 
-    /**
-     * Предварительный расчет полной стоимости позиции (материал + операции)
-     * без сохранения в базу. Возвращает детализацию по операциям.
-     * Используется order-service для расчета итогов заказа.
-     */
     @PreAuthorize("hasAnyRole('ADMIN', 'MANAGER', 'PRODUCTION')")
     @PostMapping("/preview")
     public ResponseEntity<CalculationResponseDto> preview(@Valid @RequestBody CalculationRequestDto request) {
         CalculationResponseDto dto = calculationService.calculateWithoutSaving(request);
         return ResponseEntity.ok(dto);
-    }
-
-    // Helper mapping methods
-    private MaterialDto toMaterialDto(Material material) {
-        MaterialDto dto = new MaterialDto();
-        dto.setId(material.getId());
-        dto.setName(material.getName());
-        dto.setPricePerSquareMeter(material.getPricePerSquareMeter());
-        dto.setWasteCoefficient(material.getWasteCoefficient());
-        // Determine type based on name
-        String name = material.getName();
-        if (name != null) {
-            String lower = name.toLowerCase();
-            if (lower.contains("баннер")) {
-                dto.setType("BANNER");
-            } else if (lower.contains("плёнка") || lower.contains("пленка")) {
-                dto.setType("PLENKA");
-            } else {
-                dto.setType("UNKNOWN");
-            }
-        } else {
-            dto.setType("UNKNOWN");
-        }
-        return dto;
-    }
-
-    private OperationDto toOperationDto(com.example.calculatorservice.entity.Operation op) {
-        OperationDto dto = new OperationDto();
-        dto.setId(op.getId());
-        dto.setName(op.getName());
-        dto.setPrice(op.getPrice());
-        dto.setUnit(op.getUnit().getDisplayName());
-        dto.setApplicableTo(op.getApplicableTo().name());
-        dto.setDefault(op.isDefault());
-        dto.setHemWidthMm(op.getHemWidthMm());
-        dto.setHemCount(op.getHemCount());
-        return dto;
     }
 }
